--- a/index.html
+++ b/index.html
@@ -127,12 +127,36 @@
               <div class="card">
                 <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Burlesque" aria-expanded="true" aria-controls="Burlesque">
+                      Burlesque
+                    </button>
+                  </h5>
+                </div>
+                <div id="Burlesque" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <p>
+                      ...Пенное джакузи, наслаждение ласками девушки,поцелуи и взбитые сливки слизанные с вашего тела...
+                      Сыграем?
+                    </p>
+                    <div class="description-price_mobile">
+                      <div>
+                        <p>C 1 девушкой/120минут</p>
+                        <p><b>6 000 руб.</b></p>
+                      </div>
+                      <button class="btn btn_green">Записатся</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" id="headingOne">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Foamy" aria-expanded="true" aria-controls="Foamy">
                       Foamy euphoria
                     </button>
                   </h5>
                 </div>
-                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div id="Foamy" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                   <div class="card-body">
                     <p>
                       Самое быстрое наслаждение, заряженное
@@ -150,30 +174,227 @@
                 </div>
               </div>
               <div class="card">
-                <div class="card-header" id="headingTwo">
+                <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Разворачиваемая панель #2
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Treatise" aria-expanded="true" aria-controls="Treatise">
+                      Treatise of Desires
                     </button>
                   </h5>
                 </div>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                <div id="Treatise" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                   <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    <p>
+                      Воплоти страсти в любой позе Камасутры.
+                    </p>
+                    <div class="description-price_mobile">
+                      <div>
+                        <p>C 1 девушкой/60минут</p>
+                        <p><b>5 600 руб.</b></p>
+                      </div>
+                      <div>
+                        <p>C 1 девушкой/90минут</p>
+                        <p><b>6 900 руб.</b></p>
+                      </div>
+                      <button class="btn btn_green">Записатся</button>
+                    </div>
                   </div>
                 </div>
               </div>
               <div class="card">
-                <div class="card-header" id="headingThree">
+                <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      Разворачиваемая панель #3
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Temptation" aria-expanded="true" aria-controls="Temptation">
+                      Temptation
                     </button>
                   </h5>
                 </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                <div id="Temptation" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                   <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    <p>
+                      Самые расслабляющие техники незаметно переходящие в эротизм. Активные ласки только в Вашу сторону.
+                    </p>
+                    <div class="description-price_mobile">
+                      <div>
+                        <p>C 1 девушкой/60минут</p>
+                        <p><b>3 000 руб.</b></p>
+                      </div>
+                      <button class="btn btn_green">Записатся</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" id="headingOne">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Nonrandomness" aria-expanded="true" aria-controls="Nonrandomness">
+                      Nonrandomness
+                    </button>
+                  </h5>
+                </div>
+                <div id="Nonrandomness" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <p>
+                      В шаге от соблазнительных поцелуев и нежных покусываний до стретты оральных удовольствий.
+                    </p>
+                    <div class="description-price_mobile">
+                      <div>
+                        <p>C 1 девушкой/60минут</p>
+                        <p><b>4 500 руб.</b></p>
+                      </div>
+                      <div>
+                        <p>C 1 девушкой/60минут</p>
+                        <p><b>6 200 руб.</b></p>
+                      </div>
+                      <button class="btn btn_green">Записатся</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" id="headingOne">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Sirens" aria-expanded="true" aria-controls="Sirens">
+                      Sirens
+                    </button>
+                  </h5>
+                </div>
+                <div id="Sirens" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <p>
+                      Чувствуешь как они манят тебя? Две девушки,с какой дойти до конца, решать только тебе.
+                    </p>
+                    <div class="description-price_mobile">
+                      <div>
+                        <p>C 2 девушками/90минут</p>
+                        <p><b>8 000 руб.</b></p>
+                      </div>
+                      <div>
+                        <p>C 2 девушками/120минут</p>
+                        <p><b>11 000 руб.</b></p>
+                      </div>
+                      <button class="btn btn_green">Записатся</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" id="headingOne">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#crazy" aria-expanded="true" aria-controls="crazy">
+                      We are crazy
+                    </button>
+                  </h5>
+                </div>
+                <div id="crazy" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <p>
+                      Мои подружки-лесбиянки.
+                      Попробуешь стать их другом?
+                    </p>
+                    <div class="description-price_mobile">
+                      <div>
+                        <p>C 2 девушками/60минут</p>
+                        <p><b>10 000 руб.</b></p>
+                      </div>
+                      <div>
+                        <p>C 2 девушками/90минут</p>
+                        <p><b>12 500 руб.</b></p>
+                      </div>
+                      <div>
+                        <p>C 2 девушками/120минут</p>
+                        <p><b>15 000 руб.</b></p>
+                      </div>
+                      <button class="btn btn_green">Записатся</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" id="headingOne">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Shrew" aria-expanded="true" aria-controls="Shrew">
+                      The Taming of the Shrew
+                    </button>
+                  </h5>
+                </div>
+                <div id="Shrew" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <p>
+                      Ты пробовал совместить боль и ласку,унижение и уважение? Госпожа знает подход к Боссу.
+                    </p>
+                    <div class="description-price_mobile">
+                      <div>
+                        <p>C 1 девушкой/60минут</p>
+                        <p><b>7 000 руб.</b></p>
+                      </div>
+                      <div>
+                        <p>C 1 девушкой/90минут</p>
+                        <p><b>9 500 руб.</b></p>
+                      </div>
+                      <div>
+                        <p>C 1 девушкой/120минут</p>
+                        <p><b>11 000 руб.</b></p>
+                      </div>
+                      <button class="btn btn_green">Записатся</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" id="headingOne">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Infinity" aria-expanded="true" aria-controls="Infinity">
+                      Infinity
+                    </button>
+                  </h5>
+                </div>
+                <div id="Infinity" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <p>
+                      Каждый знает об этой программе, потому что составляет её сам. Только лучшие техники на твой выбор.
+                    </p>
+                    <div class="description-price_mobile">
+                      <div>
+                        <p>C 1 девушкой/60минут</p>
+                        <p><b>6 500 руб.</b></p>
+                      </div>
+                      <div>
+                        <p>C 1 девушкой/90минут</p>
+                        <p><b>8 000 руб.</b></p>
+                      </div>
+                      <div>
+                        <p>C 1 девушкой/120минут</p>
+                        <p><b>9 900 руб.</b></p>
+                      </div>
+                      <button class="btn btn_green">Записатся</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" id="headingOne">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Solo" aria-expanded="true" aria-controls="Solo">
+                      Solo
+                    </button>
+                  </h5>
+                </div>
+                <div id="Solo" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <p>
+                      Стань режиссёром фильма, где девушка ласкает себя игрушками, не забывая о тебе.
+                    </p>
+                    <div class="description-price_mobile">
+                      <div>
+                        <p>C 1 девушкой/60минут</p>
+                        <p><b>6 500 руб.</b></p>
+                      </div>
+                      <div>
+                        <p>C 1 девушкой/90минут</p>
+                        <p><b>8 000 руб.</b></p>
+                      </div>
+                      <button class="btn btn_green">Записатся</button>
+                    </div>
                   </div>
                 </div>
               </div>
