--- a/index.html
+++ b/index.html
@@ -14,28 +14,66 @@
     <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content rounded-0">
+          <div class="row">
+            <div class="col-5 d-none d-md-block"></div>
+            <div class="col-12 col-md-7">
+              <h4 class="title_modal my-5 text-center">Записатся на услугу</h4>
+              <form action="" class="d-flex flex-column align-items-center">
+                <input type="text" class="my-3" placeholder="Представтесь">
+                <input type="tel" class="my-3" placeholder="+7(___) ___ __ __">
+                <button type="submit" class="btn my-3">Записатся</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="warning d-flex align-items-center justify-content-center">
+      <div class="d-flex flex-column align-items-center">
+        <h3 class="my-3">Проверка возраста</h3>
+        <p class="my-3 text-center">Сайт содержит информацию, предназначенную <span class="text-green">для лиц старше 21 год.</span></p>
+        <button class="btn btn_green mt-3 mb-2" id="open-site"><b>Я старше 21 года</b></button>
+        <a href="https://www.google.com/" class="btn btn_none-style-btn mt-4">Мне нет 21 года</a>
+      </div>
+    </div>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
       <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a href="#" class="navbar-brend flex-column text-decoration-none d-flex align-items-center mx-5">
+      <a href="#" class="navbar-brend flex-column text-decoration-none d-flex align-items-center mx-md-5">
         <img src="img/logo/logo-header.png" alt="logo" class="logo-img">
       </a>
       <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
-        <ul class="navbar-nav" id="sideMenu">
+        <ul class="navbar-nav mt-5 mt-md-0" id="sideMenu">
           <li class="nav-item text-center" data-menuanchor="home">
-            <a class="nav-link text-white" href="#home">Главная</a>
+            <a class="nav-link text-white d-none d-md-block" href="#home">Главная</a>
+            <a class="nav-link_mobile nav-link text-white d-block d-md-none" href="#home-mobile">Главная</a>
           </li>
           <li class="nav-item text-center" data-menuanchor="girl">
-            <a class="nav-link text-white" href="#girl">Девушки</a>
+            <a class="nav-link text-white d-none d-md-block" href="#girl">Девушки</a>
+            <a class="nav-link_mobile nav-link text-white d-block d-md-none" href="#girl-mobile">Девушки</a>
           </li>
           <li class="nav-item text-center" data-menuanchor="services">
-            <a class="nav-link text-white" href="#services">Услуги</a>
+            <a class="nav-link text-white d-none d-md-block" href="#services">Услуги</a>
+            <a class="nav-link_mobile nav-link text-white d-block d-md-none" href="#services-mobile">Услуги</a>
           </li>
           <li class="nav-item text-center" data-menuanchor="contact">
-            <a class="nav-link text-white" href="#contact">Контакты</a>
+            <a class="nav-link text-white d-none d-md-block" href="#contact">Контакты</a>
+            <a class="nav-link_mobile nav-link text-white d-block d-md-none" href="#contact-mobile">Контакты</a>
           </li>
         </ul>
+        <div class="d-flex d-md-none flex-column align-items-center mx-auto mt-5">
+          <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
+          <button class="btn btn_call p-0 border-0 text-green w-auto">Заказать звонок</button>
+        </div>
+        <div class="ban-menu d-flex d-md-none justify-content-center my-3">
+          <img src="img/warning/21+.png" alt="" class="mb-0 mb-xl-3 mr-3">
+          <img src="img/warning/not-sex.png" alt="">
+        </div>
       </div>
       <div class="d-none d-md-flex flex-column align-items-end">
         <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
@@ -44,7 +82,7 @@
     </nav>
     <div id="fullpage">
       <!-- home ----------------------------------------->
-      <div class="section home" data-anchor="home">
+      <div class="section home" data-anchor="home" id="home-mobile">
         <div class="container">
           <div class="row">
             <div class="col-12">
@@ -54,13 +92,13 @@
                 «Foamy euphoria»</span> где ты сможешь познакомиться
                 с заведением, девушками и убедиться что мы
                 лучшие! Звони быстрее</p>
-              <button class="btn mt-5">Записатся</button>
+              <button class="btn mt-5" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
             </div>
           </div>
         </div>
       </div>
       <!-- girl ---------------------------------------->
-      <div class="section girl position-relative overflow-hidden" data-anchor="girl">
+      <div class="section girl position-relative overflow-hidden" data-anchor="girl" id="girl-mobile">
         <div class="line line_l"></div>
         <div class="line line_r"></div>
         <div class="slider-girl">
@@ -79,12 +117,12 @@
           <div class="d-flex align-items-center">
             <p class="text-green mr-3">Возраст</p> <p class="title title_medium" id="age">20</p>
           </div>
-          <button class="btn mt-5 d-none d-md-block">Записатся</button>
+          <button class="btn mt-5 d-none d-md-block" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
         </div>
-        <button class="btn-mobile_girl mt-5 d-block d-md-none">Записатся</button>
+        <button class="btn-mobile_girl mt-5 d-block d-md-none" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
       </div>
       <!-- servise ------------------------------------->
-      <div class="section servise" data-anchor="servise">
+      <div class="section servise" data-anchor="servise" id="services-mobile">
         <div class="container">
           <div class="row d-none d-xl-flex">
             <div class="col-6">
@@ -118,7 +156,7 @@
                       </div>
                     </div>
                 </div>
-                <button class="btn btn_green mt-5">Записатся</button>
+                <button class="btn btn_green mt-5" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
               </div>
             </div>
           </div>
@@ -143,7 +181,7 @@
                         <p>C 1 девушкой/120минут</p>
                         <p><b>6 000 руб.</b></p>
                       </div>
-                      <button class="btn btn_green">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
                     </div>
                   </div>
                 </div>
@@ -168,7 +206,7 @@
                         <p>C 1 девушкой/30минут</p>
                         <p><b>1 900 руб.</b></p>
                       </div>
-                      <button class="btn btn_green">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
                     </div>
                   </div>
                 </div>
@@ -195,7 +233,7 @@
                         <p>C 1 девушкой/90минут</p>
                         <p><b>6 900 руб.</b></p>
                       </div>
-                      <button class="btn btn_green">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
                     </div>
                   </div>
                 </div>
@@ -218,7 +256,7 @@
                         <p>C 1 девушкой/60минут</p>
                         <p><b>3 000 руб.</b></p>
                       </div>
-                      <button class="btn btn_green">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
                     </div>
                   </div>
                 </div>
@@ -245,7 +283,7 @@
                         <p>C 1 девушкой/60минут</p>
                         <p><b>6 200 руб.</b></p>
                       </div>
-                      <button class="btn btn_green">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
                     </div>
                   </div>
                 </div>
@@ -272,7 +310,7 @@
                         <p>C 2 девушками/120минут</p>
                         <p><b>11 000 руб.</b></p>
                       </div>
-                      <button class="btn btn_green">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
                     </div>
                   </div>
                 </div>
@@ -304,7 +342,7 @@
                         <p>C 2 девушками/120минут</p>
                         <p><b>15 000 руб.</b></p>
                       </div>
-                      <button class="btn btn_green">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
                     </div>
                   </div>
                 </div>
@@ -335,7 +373,7 @@
                         <p>C 1 девушкой/120минут</p>
                         <p><b>11 000 руб.</b></p>
                       </div>
-                      <button class="btn btn_green">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
                     </div>
                   </div>
                 </div>
@@ -366,7 +404,7 @@
                         <p>C 1 девушкой/120минут</p>
                         <p><b>9 900 руб.</b></p>
                       </div>
-                      <button class="btn btn_green">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
                     </div>
                   </div>
                 </div>
@@ -393,7 +431,7 @@
                         <p>C 1 девушкой/90минут</p>
                         <p><b>8 000 руб.</b></p>
                       </div>
-                      <button class="btn btn_green">Записатся</button>
+                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
                     </div>
                   </div>
                 </div>
@@ -403,7 +441,7 @@
         </div>
       </div>
       <!-- contact ---------------------------------------->
-      <div class="section contact" data-anchor="contact">
+      <div class="section contact" data-anchor="contact" id="contact-mobile">
         <div class="container">
           <div class="row">
             <div class="col-12 col-lg-6">
@@ -418,7 +456,7 @@
                 <p class="text-green">Звоните по телефону:</p>
                 <h5>8 (927) 006-30-06</h5>
               </div>
-              <button class="btn d-none d-lg-block">Записатся</button>
+              <button class="btn d-none d-lg-block" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
             </div>
             <div class="col-12 col-lg-6 mt-5">
               <div class="contact__info">
@@ -426,7 +464,7 @@
                   Вы ищите где расслабиться после
                   трудного дня в Самаре?
                 </h6>
-                <button class="btn d-block d-lg-none w-75 mx-auto">Записатся</button>
+                <button class="btn d-block d-lg-none w-75 mx-auto" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
                 <p class="d-none d-lg-block">
                   Мужской спа-салон «Эмбарго» предложит
                   на выбор 10 качественных spa программ,
