--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
             </div>
           </div>
           <div class="row d-xl-none">
+            <h2 class="title title_big home__title">Программы</h2>
+            <h3 class="title text-dark title_medium servise__sub-title mb-5">мужского спа</h3>
             <div class="accordion" id="accordionExample">
               <div class="card">
                 <div class="card-header" id="headingOne">
