--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div> -->
       <!-- home ----------------------------------------->
       <div class="section home" data-anchor="home" id="home-mobile">
-        <nav class="navbar navbar-expand-md navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark">
           <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -51,16 +51,16 @@
           <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
             <ul class="navbar-nav mt-5 mt-md-0" id="sideMenu">
               <li class="nav-item text-center" data-menuanchor="home">
-                <a class="nav-link text-white d-none d-md-block" href="index.html">Главная</a>
+                <a class="nav-link text-white" href="index.html">Главная</a>
               </li>
               <li class="nav-item text-center" data-menuanchor="girl">
-                <a class="nav-link text-white d-none d-md-block" href="girl.html">Девушки</a>
+                <a class="nav-link text-white" href="girl.html">Девушки</a>
               </li>
               <li class="nav-item text-center" data-menuanchor="services">
-                <a class="nav-link text-white d-none d-md-block" href="services.html">Услуги</a>
+                <a class="nav-link text-white" href="services.html">Услуги</a>
               </li>
               <li class="nav-item text-center" data-menuanchor="contact">
-                <a class="nav-link text-white d-none d-md-block" href="contact.html">Контакты</a>
+                <a class="nav-link text-white" href="contact.html">Контакты</a>
               </li>
             </ul>
             <div class="d-flex d-md-none flex-column align-items-center mx-auto mt-5">
@@ -77,7 +77,7 @@
             <button class="btn btn_call p-0 border-0 text-green w-auto">Заказать звонок</button>
           </div>
         </nav>
-        <div class="container">
+        <div class="container home__inner">
           <div class="row">
             <div class="col-12">
               <h1 class="title title_big home__title">Мужской<br><span>Бар-SPA</span></h1>
@@ -91,8 +91,8 @@
           </div>
         </div>
       </div>
-    <div class="ban position-fixed d-flex flex-wrap flex-xl-column justify-content-center">
-      <img src="img/warning/21+.png" alt="" class="mb-0 mb-xl-3 mr-3 mr-xl-0">
+    <div class="ban position-fixed d-flex flex-wrap flex-md-column justify-content-center ml-md-4 mb-md-5">
+      <img src="img/warning/21+.png" alt="" class="mb-0 mb-md-3 mr-3 mr-md-0">
       <img src="img/warning/not-sex.png" alt="">
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
