--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </ul>
             <div class="d-flex d-md-none flex-column align-items-center mx-auto mt-5">
               <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
-              <button class="btn btn_call p-0 border-0 text-green w-auto">Заказать звонок</button>
+              <button class="btn btn_call p-0 border-0 text-green w-auto" data-toggle="modal" data-target="#exampleModal">Заказать звонок</button>
             </div>
             <div class="ban-menu d-flex d-md-none justify-content-center my-3">
               <img src="img/warning/21+.png" alt="" class="mb-0 mb-xl-3 mr-3">
@@ -74,11 +74,11 @@
           </div> 
           <div class="d-none d-md-flex flex-column align-items-end">
             <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
-            <button class="btn btn_call p-0 border-0 text-green w-auto">Заказать звонок</button>
+            <button class="btn btn_call p-0 border-0 text-green w-auto" data-toggle="modal" data-target="#exampleModal">Заказать звонок</button>
           </div>
         </nav>
-        <div class="container home__inner">
-          <div class="row">
+        <div class="home__inner">
+          <div class="row w-100">
             <div class="col-12">
               <h1 class="title title_big home__title">Мужской<br><span>Бар-SPA</span></h1>
               <h2 class="home__discription text-green title title_medium mb-5">В центре Самары</h2>
