--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <img src="img/warning/not-sex.png" alt="">
             </div>
           </div> 
-          <div class="d-none d-md-flex flex-column align-items-end">
+          <div class="d-none d-md-flex flex-column align-items-end mr-5">
             <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
             <button class="btn btn_call p-0 border-0 text-green w-auto" data-toggle="modal" data-target="#exampleModal">Заказать звонок</button>
           </div>
