--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
           </div>
         </div>
       </div>
+      <div class="mouse"></div>
     <div class="ban position-fixed d-flex flex-wrap flex-md-column justify-content-center ml-md-4 mb-md-5">
       <img src="img/warning/21+.png" alt="" class="mb-0 mb-md-3 mr-3 mr-md-0">
       <img src="img/warning/not-sex.png" alt="">
