--- a/contact.html
+++ b/contact.html
@@ -31,49 +31,49 @@
         </div>
       </div>
     </div>
-    <nav class="navbar navbar-expand-md navbar-dark">
-      <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a href="#" class="navbar-brend flex-column text-decoration-none d-flex align-items-center mx-md-5">
-        <img src="img/logo/logo-header.png" alt="logo" class="logo-img">
-      </a>
-      <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
-        <ul class="navbar-nav mt-5 mt-md-0" id="sideMenu">
-            <li class="nav-item text-center" data-menuanchor="home">
-              <a class="nav-link text-white d-none d-md-block" href="index.html">Главная</a>
-            </li>
-            <li class="nav-item text-center" data-menuanchor="girl">
-              <a class="nav-link text-white d-none d-md-block" href="girl.html">Девушки</a>
-            </li>
-            <li class="nav-item text-center" data-menuanchor="services">
-              <a class="nav-link text-white d-none d-md-block" href="services.html">Услуги</a>
-            </li>
-            <li class="nav-item text-center" data-menuanchor="contact">
-              <a class="nav-link text-white d-none d-md-block" href="contact.html">Контакты</a>
-            </li>
-        </ul>
-        <div class="d-flex d-md-none flex-column align-items-center mx-auto mt-5">
-          <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
-          <button class="btn btn_call p-0 border-0 text-green w-auto">Заказать звонок</button>
-        </div>
-        <div class="ban-menu d-flex d-md-none justify-content-center my-3">
-          <img src="img/warning/21+.png" alt="" class="mb-0 mb-xl-3 mr-3">
-          <img src="img/warning/not-sex.png" alt="">
-        </div>
-      </div>
-      <div class="d-none d-md-flex flex-column align-items-end">
-        <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
-        <button class="btn btn_call p-0 border-0 text-green w-auto">Заказать звонок</button>
-      </div>
-    </nav>
       <!-- contact ---------------------------------------->
       <div class="section contact" data-anchor="contact" id="contact-mobile">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <a href="#" class="navbar-brend flex-column text-decoration-none d-flex align-items-center mx-md-5">
+              <img src="img/logo/logo-header.png" alt="logo" class="logo-img">
+            </a>
+            <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
+              <ul class="navbar-nav mt-5 mt-md-0" id="sideMenu">
+                <li class="nav-item text-center" data-menuanchor="home">
+                  <a class="nav-link text-white" href="index.html">Главная</a>
+                </li>
+                <li class="nav-item text-center" data-menuanchor="girl">
+                  <a class="nav-link text-white" href="girl.html">Девушки</a>
+                </li>
+                <li class="nav-item text-center" data-menuanchor="services">
+                  <a class="nav-link text-white" href="services.html">Услуги</a>
+                </li>
+                <li class="nav-item text-center" data-menuanchor="contact">
+                  <a class="nav-link text-white" href="contact.html">Контакты</a>
+                </li>
+              </ul>
+              <div class="d-flex d-md-none flex-column align-items-center mx-auto mt-5">
+                <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
+                <button class="btn btn_call p-0 border-0 text-green w-auto" data-toggle="modal" data-target="#exampleModal">Заказать звонок</button>
+              </div>
+              <div class="ban-menu d-flex d-md-none justify-content-center my-3">
+                <img src="img/warning/21+.png" alt="" class="mb-0 mb-xl-3 mr-3">
+                <img src="img/warning/not-sex.png" alt="">
+              </div>
+            </div> 
+            <div class="d-none d-md-flex flex-column align-items-end mr-5">
+              <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
+              <button class="btn btn_call p-0 border-0 text-green w-auto" data-toggle="modal" data-target="#exampleModal">Заказать звонок</button>
+            </div>
+          </nav>
         <div class="container">
           <div class="row">
             <div class="col-12 col-lg-6">
               <h2 class="title title_big home__title">Рады тебе</h2>
-              <h3 class="title text-dark title_medium servise__sub-title mb-5">Контакты</h3>
+              <h3 class="title text-dark title_medium servise__sub-title">Контакты</h3>
               <div class="mb-5">
                 <p class="text-green">Мы находимся по адресу:</p>
                 <h5>г. Самара,<br>
@@ -85,7 +85,7 @@
               </div>
               <button class="btn d-none d-lg-block" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
             </div>
-            <div class="col-12 col-lg-6 mt-5">
+            <div class="col-12 col-lg-6 mt-3">
               <div class="contact__info">
                 <h6 class="mb-3">
                   Вы ищите где расслабиться после
