--- a/girl.html
+++ b/girl.html
@@ -64,7 +64,7 @@
                 <img src="img/warning/not-sex.png" alt="">
               </div>
             </div> 
-            <div class="d-none d-md-flex flex-column align-items-end">
+            <div class="d-none d-md-flex flex-column align-items-end mr-5">
               <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
               <button class="btn btn_call p-0 border-0 text-green w-auto" data-toggle="modal" data-target="#exampleModal">Заказать звонок</button>
             </div>
@@ -95,6 +95,7 @@
         <img src="img/warning/21+.png" alt="" class="mb-0 mb-xl-3 mr-3 mr-xl-0">
         <img src="img/warning/not-sex.png" alt="">
       </div>
+      <div class="mouse"></div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
