--- a/girl.html
+++ b/girl.html
@@ -87,7 +87,7 @@
           <div class="d-flex align-items-center">
             <p class="text-green mr-3">Возраст</p> <p class="title title_medium" id="age">20</p>
           </div>
-          <button class="btn mt-5 d-none d-md-block" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
+          <button class="btn mt-5 d-none d-md-block girl__btn" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
         </div>
         <button class="btn-mobile_girl mt-5 d-block d-md-none" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
       </div>
