--- a/services.html
+++ b/services.html
@@ -31,10 +31,9 @@
         </div>
       </div>
     </div>
-    <div id="fullpage">
       <!-- servise ------------------------------------->
       <div class="section servise" data-anchor="servise" id="services-mobile">
-        <nav class="navbar navbar-expand-md navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -43,35 +42,35 @@
             </a>
             <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
               <ul class="navbar-nav mt-5 mt-md-0" id="sideMenu">
-                  <li class="nav-item text-center" data-menuanchor="home">
-                    <a class="nav-link text-white d-none d-md-block" href="index.html">Главная</a>
-                  </li>
-                  <li class="nav-item text-center" data-menuanchor="girl">
-                    <a class="nav-link text-white d-none d-md-block" href="girl.html">Девушки</a>
-                  </li>
-                  <li class="nav-item text-center" data-menuanchor="services">
-                    <a class="nav-link text-white d-none d-md-block" href="services.html">Услуги</a>
-                  </li>
-                  <li class="nav-item text-center" data-menuanchor="contact">
-                    <a class="nav-link text-white d-none d-md-block" href="contact.html">Контакты</a>
-                  </li>
+                <li class="nav-item text-center" data-menuanchor="home">
+                  <a class="nav-link text-white" href="index.html">Главная</a>
+                </li>
+                <li class="nav-item text-center" data-menuanchor="girl">
+                  <a class="nav-link text-white" href="girl.html">Девушки</a>
+                </li>
+                <li class="nav-item text-center" data-menuanchor="services">
+                  <a class="nav-link text-white" href="services.html">Услуги</a>
+                </li>
+                <li class="nav-item text-center" data-menuanchor="contact">
+                  <a class="nav-link text-white" href="contact.html">Контакты</a>
+                </li>
               </ul>
               <div class="d-flex d-md-none flex-column align-items-center mx-auto mt-5">
                 <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
-                <button class="btn btn_call p-0 border-0 text-green w-auto">Заказать звонок</button>
+                <button class="btn btn_call p-0 border-0 text-green w-auto" data-toggle="modal" data-target="#exampleModal">Заказать звонок</button>
               </div>
               <div class="ban-menu d-flex d-md-none justify-content-center my-3">
                 <img src="img/warning/21+.png" alt="" class="mb-0 mb-xl-3 mr-3">
                 <img src="img/warning/not-sex.png" alt="">
               </div>
-            </div>
-            <div class="d-none d-md-flex flex-column align-items-end">
+            </div> 
+            <div class="d-none d-md-flex flex-column align-items-end mr-5">
               <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
-              <button class="btn btn_call p-0 border-0 text-green w-auto">Заказать звонок</button>
+              <button class="btn btn_call p-0 border-0 text-green w-auto" data-toggle="modal" data-target="#exampleModal">Заказать звонок</button>
             </div>
           </nav>
         <div class="container">
-          <div class="row d-none d-xl-flex">
+          <div class="row d-flex">
             <div class="col-6">
               <h2 class="title title_big home__title">Программы</h2>
               <h3 class="title text-dark title_medium servise__sub-title mb-5">мужского спа</h3>
@@ -89,7 +88,7 @@
               </ul>
               <button class="btn btn_none-style-btn text-green ml-2 d-none" id="btn-show-price-list">Посмотреть все программы</button>
             </div>
-            <div class="col-5 position-relative">
+            <div class="col-6 position-relative">
               <div class="servise__info-programs">
                 <div class="servise__info-programs__body">
                   <p id="description">Самое быстрое наслаждение, заряженное
@@ -103,292 +102,11 @@
                       </div>
                     </div>
                 </div>
-                <button class="btn btn_green mt-5" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
-              </div>
-            </div>
-          </div>
-          <div class="row d-xl-none">
-            <h2 class="title title_big home__title">Программы</h2>
-            <h3 class="title text-dark title_medium servise__sub-title mb-5">мужского спа</h3>
-            <div class="accordion" id="accordionExample">
-              <div class="card">
-                <div class="card-header" id="headingOne">
-                  <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Burlesque" aria-expanded="true" aria-controls="Burlesque">
-                      Burlesque
-                    </button>
-                  </h5>
-                </div>
-                <div id="Burlesque" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                  <div class="card-body">
-                    <p>
-                      ...Пенное джакузи, наслаждение ласками девушки,поцелуи и взбитые сливки слизанные с вашего тела...
-                      Сыграем?
-                    </p>
-                    <div class="description-price_mobile">
-                      <div>
-                        <p>C 1 девушкой/120минут</p>
-                        <p><b>6 000 руб.</b></p>
-                      </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header" id="headingOne">
-                  <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Foamy" aria-expanded="true" aria-controls="Foamy">
-                      Foamy euphoria
-                    </button>
-                  </h5>
-                </div>
-                <div id="Foamy" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                  <div class="card-body">
-                    <p>
-                      Самое быстрое наслаждение, заряженное
-                      на все 100. Начни рабочий день
-                      с небольшого отдыха.
-                    </p>
-                    <div class="description-price_mobile">
-                      <div>
-                        <p>C 1 девушкой/30минут</p>
-                        <p><b>1 900 руб.</b></p>
-                      </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header" id="headingOne">
-                  <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Treatise" aria-expanded="true" aria-controls="Treatise">
-                      Treatise of Desires
-                    </button>
-                  </h5>
-                </div>
-                <div id="Treatise" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                  <div class="card-body">
-                    <p>
-                      Воплоти страсти в любой позе Камасутры.
-                    </p>
-                    <div class="description-price_mobile">
-                      <div>
-                        <p>C 1 девушкой/60минут</p>
-                        <p><b>5 600 руб.</b></p>
-                      </div>
-                      <div>
-                        <p>C 1 девушкой/90минут</p>
-                        <p><b>6 900 руб.</b></p>
-                      </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header" id="headingOne">
-                  <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Temptation" aria-expanded="true" aria-controls="Temptation">
-                      Temptation
-                    </button>
-                  </h5>
-                </div>
-                <div id="Temptation" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                  <div class="card-body">
-                    <p>
-                      Самые расслабляющие техники незаметно переходящие в эротизм. Активные ласки только в Вашу сторону.
-                    </p>
-                    <div class="description-price_mobile">
-                      <div>
-                        <p>C 1 девушкой/60минут</p>
-                        <p><b>3 000 руб.</b></p>
-                      </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header" id="headingOne">
-                  <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Nonrandomness" aria-expanded="true" aria-controls="Nonrandomness">
-                      Nonrandomness
-                    </button>
-                  </h5>
-                </div>
-                <div id="Nonrandomness" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                  <div class="card-body">
-                    <p>
-                      В шаге от соблазнительных поцелуев и нежных покусываний до стретты оральных удовольствий.
-                    </p>
-                    <div class="description-price_mobile">
-                      <div>
-                        <p>C 1 девушкой/60минут</p>
-                        <p><b>4 500 руб.</b></p>
-                      </div>
-                      <div>
-                        <p>C 1 девушкой/60минут</p>
-                        <p><b>6 200 руб.</b></p>
-                      </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header" id="headingOne">
-                  <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Sirens" aria-expanded="true" aria-controls="Sirens">
-                      Sirens
-                    </button>
-                  </h5>
-                </div>
-                <div id="Sirens" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                  <div class="card-body">
-                    <p>
-                      Чувствуешь как они манят тебя? Две девушки,с какой дойти до конца, решать только тебе.
-                    </p>
-                    <div class="description-price_mobile">
-                      <div>
-                        <p>C 2 девушками/90минут</p>
-                        <p><b>8 000 руб.</b></p>
-                      </div>
-                      <div>
-                        <p>C 2 девушками/120минут</p>
-                        <p><b>11 000 руб.</b></p>
-                      </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header" id="headingOne">
-                  <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#crazy" aria-expanded="true" aria-controls="crazy">
-                      We are crazy
-                    </button>
-                  </h5>
-                </div>
-                <div id="crazy" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                  <div class="card-body">
-                    <p>
-                      Мои подружки-лесбиянки.
-                      Попробуешь стать их другом?
-                    </p>
-                    <div class="description-price_mobile">
-                      <div>
-                        <p>C 2 девушками/60минут</p>
-                        <p><b>10 000 руб.</b></p>
-                      </div>
-                      <div>
-                        <p>C 2 девушками/90минут</p>
-                        <p><b>12 500 руб.</b></p>
-                      </div>
-                      <div>
-                        <p>C 2 девушками/120минут</p>
-                        <p><b>15 000 руб.</b></p>
-                      </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header" id="headingOne">
-                  <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Shrew" aria-expanded="true" aria-controls="Shrew">
-                      The Taming of the Shrew
-                    </button>
-                  </h5>
-                </div>
-                <div id="Shrew" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                  <div class="card-body">
-                    <p>
-                      Ты пробовал совместить боль и ласку,унижение и уважение? Госпожа знает подход к Боссу.
-                    </p>
-                    <div class="description-price_mobile">
-                      <div>
-                        <p>C 1 девушкой/60минут</p>
-                        <p><b>7 000 руб.</b></p>
-                      </div>
-                      <div>
-                        <p>C 1 девушкой/90минут</p>
-                        <p><b>9 500 руб.</b></p>
-                      </div>
-                      <div>
-                        <p>C 1 девушкой/120минут</p>
-                        <p><b>11 000 руб.</b></p>
-                      </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header" id="headingOne">
-                  <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Infinity" aria-expanded="true" aria-controls="Infinity">
-                      Infinity
-                    </button>
-                  </h5>
-                </div>
-                <div id="Infinity" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                  <div class="card-body">
-                    <p>
-                      Каждый знает об этой программе, потому что составляет её сам. Только лучшие техники на твой выбор.
-                    </p>
-                    <div class="description-price_mobile">
-                      <div>
-                        <p>C 1 девушкой/60минут</p>
-                        <p><b>6 500 руб.</b></p>
-                      </div>
-                      <div>
-                        <p>C 1 девушкой/90минут</p>
-                        <p><b>8 000 руб.</b></p>
-                      </div>
-                      <div>
-                        <p>C 1 девушкой/120минут</p>
-                        <p><b>9 900 руб.</b></p>
-                      </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header" id="headingOne">
-                  <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Solo" aria-expanded="true" aria-controls="Solo">
-                      Solo
-                    </button>
-                  </h5>
-                </div>
-                <div id="Solo" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                  <div class="card-body">
-                    <p>
-                      Стань режиссёром фильма, где девушка ласкает себя игрушками, не забывая о тебе.
-                    </p>
-                    <div class="description-price_mobile">
-                      <div>
-                        <p>C 1 девушкой/60минут</p>
-                        <p><b>6 500 руб.</b></p>
-                      </div>
-                      <div>
-                        <p>C 1 девушкой/90минут</p>
-                        <p><b>8 000 руб.</b></p>
-                      </div>
-                      <button class="btn btn_green" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Записатся</button>
-                    </div>
-                  </div>
-                </div>
+                <button class="btn btn_green mt-5 mx-auto ml-5" data-toggle="modal" data-target="#exampleModal">Записатся</button>
               </div>
             </div>
           </div>
         </div>
-      </div>
     <div class="ban position-fixed d-flex flex-wrap flex-xl-column justify-content-center">
       <img src="img/warning/21+.png" alt="" class="mb-0 mb-xl-3 mr-3 mr-xl-0">
       <img src="img/warning/not-sex.png" alt="">
