--- a/services.html
+++ b/services.html
@@ -33,14 +33,14 @@
     </div>
       <!-- servise ------------------------------------->
       <div class="section servise" data-anchor="servise" id="services-mobile">
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-            <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top ">
+            <button class="navbar-toggler border-0 order-md-1" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <a href="#" class="navbar-brend flex-column text-decoration-none d-flex align-items-center mx-md-5">
+            <a href="#" class="navbar-brend flex-column text-decoration-none d-flex align-items-center ml-5 mx-lg-5 order-md-2">
               <img src="img/logo/logo-header.png" alt="logo" class="logo-img">
             </a>
-            <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-start order-md-4 order-lg-3" id="navbarNav">
               <ul class="navbar-nav mt-5 mt-md-0" id="sideMenu">
                 <li class="nav-item text-center" data-menuanchor="home">
                   <a class="nav-link text-white" href="index.html">Главная</a>
@@ -59,12 +59,12 @@
                 <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
                 <button class="btn btn_call p-0 border-0 text-green w-auto" data-toggle="modal" data-target="#exampleModal">Заказать звонок</button>
               </div>
-              <div class="ban-menu d-flex d-md-none justify-content-center my-3">
+              <div class="ban-menu d-flex d-md-none justify-content-center my-3 ">
                 <img src="img/warning/21+.png" alt="" class="mb-0 mb-xl-3 mr-3">
                 <img src="img/warning/not-sex.png" alt="">
               </div>
             </div> 
-            <div class="d-none d-md-flex flex-column align-items-end mr-5">
+            <div class="d-none d-md-flex flex-column align-items-end mr-lg-5 order-md-3 order-lg-4">
               <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
               <button class="btn btn_call p-0 border-0 text-green w-auto" data-toggle="modal" data-target="#exampleModal">Заказать звонок</button>
             </div>
@@ -73,7 +73,7 @@
           <div class="row d-flex">
             <div class="col-6">
               <h2 class="title title_big home__title">Программы</h2>
-              <h3 class="title text-dark title_medium servise__sub-title mb-5">мужского спа</h3>
+              <h3 class="title text-dark title_medium servise__sub-title mb-3">мужского спа</h3>
               <ul class="pl-0 mb-5 custom-scroll" data-mcs-theme="rounded-dots">
                 <li class="d-flex justify-content-between item-programm" data-nameProgramm="Burlesque"><span>Burlesque</span> <span><span class="mr-5 text-crossed">от 12 000 ₽</span><span><b>6 000 ₽</b></span></span></li>
                 <li class="d-flex justify-content-between item-programm item-programm__active" data-nameProgramm="Foamy euphoria"><span>Foamy euphoria</span><span><b>от 1 900 ₽</b></span></li>
