--- a/index.html
+++ b/index.html
@@ -40,43 +40,43 @@
       </div>
     </div> -->
       <!-- home ----------------------------------------->
-      <div class="section home" data-anchor="home" id="home-mobile">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-          <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a href="#" class="navbar-brend flex-column text-decoration-none d-flex align-items-center mx-md-5">
-            <img src="img/logo/logo-header.png" alt="logo" class="logo-img">
-          </a>
-          <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
-            <ul class="navbar-nav mt-5 mt-md-0" id="sideMenu">
-              <li class="nav-item text-center" data-menuanchor="home">
-                <a class="nav-link text-white" href="index.html">Главная</a>
-              </li>
-              <li class="nav-item text-center" data-menuanchor="girl">
-                <a class="nav-link text-white" href="girl.html">Девушки</a>
-              </li>
-              <li class="nav-item text-center" data-menuanchor="services">
-                <a class="nav-link text-white" href="services.html">Услуги</a>
-              </li>
-              <li class="nav-item text-center" data-menuanchor="contact">
-                <a class="nav-link text-white" href="contact.html">Контакты</a>
-              </li>
-            </ul>
-            <div class="d-flex d-md-none flex-column align-items-center mx-auto mt-5">
-              <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
-              <button class="btn btn_call p-0 border-0 text-green w-auto" data-toggle="modal" data-target="#exampleModal">Заказать звонок</button>
-            </div>
-            <div class="ban-menu d-flex d-md-none justify-content-center my-3">
-              <img src="img/warning/21+.png" alt="" class="mb-0 mb-xl-3 mr-3">
-              <img src="img/warning/not-sex.png" alt="">
-            </div>
-          </div> 
-          <div class="d-none d-md-flex flex-column align-items-end mr-5">
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top ">
+        <button class="navbar-toggler border-0 order-md-1" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a href="#" class="navbar-brend flex-column text-decoration-none d-flex align-items-center ml-5 mx-lg-5 order-md-2">
+          <img src="img/logo/logo-header.png" alt="logo" class="logo-img">
+        </a>
+        <div class="collapse navbar-collapse justify-content-start order-md-4 order-lg-3" id="navbarNav">
+          <ul class="navbar-nav mt-5 mt-md-0" id="sideMenu">
+            <li class="nav-item text-center" data-menuanchor="home">
+              <a class="nav-link text-white" href="index.html">Главная</a>
+            </li>
+            <li class="nav-item text-center" data-menuanchor="girl">
+              <a class="nav-link text-white" href="girl.html">Девушки</a>
+            </li>
+            <li class="nav-item text-center" data-menuanchor="services">
+              <a class="nav-link text-white" href="services.html">Услуги</a>
+            </li>
+            <li class="nav-item text-center" data-menuanchor="contact">
+              <a class="nav-link text-white" href="contact.html">Контакты</a>
+            </li>
+          </ul>
+          <div class="d-flex d-md-none flex-column align-items-center mx-auto mt-5">
             <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
             <button class="btn btn_call p-0 border-0 text-green w-auto" data-toggle="modal" data-target="#exampleModal">Заказать звонок</button>
           </div>
-        </nav>
+          <div class="ban-menu d-flex d-md-none justify-content-center my-3 ">
+            <img src="img/warning/21+.png" alt="" class="mb-0 mb-xl-3 mr-3">
+            <img src="img/warning/not-sex.png" alt="">
+          </div>
+        </div> 
+        <div class="d-none d-md-flex flex-column align-items-end mr-lg-5 order-md-3 order-lg-4">
+          <a href="tel:+79270063006" class="phone-header text-blue mb-0">8 (927) 006-30-06</a>
+          <button class="btn btn_call p-0 border-0 text-green w-auto" data-toggle="modal" data-target="#exampleModal">Заказать звонок</button>
+        </div>
+      </nav>
+      <div class="section home" data-anchor="home" id="home-mobile">
         <div class="home__inner">
           <div class="row w-100">
             <div class="col-12">
