--- a/m-index.html
+++ b/m-index.html
@@ -166,12 +166,12 @@
                 <h2 class="title title_big home__title">Программы</h2>
                 <h3 class="title text-dark title_medium servise__sub-title mb-5">мужского спа</h3>
               </div>
-            <div class="accordion" id="accordionExample">
+            <div class="accordion w-100" id="accordionExample">
               <div class="card">
                 <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Burlesque" aria-expanded="true" aria-controls="Burlesque">
-                      Burlesque
+                    <button class="btn btn-link w-100 d-flex justify-content-between" type="button" data-toggle="collapse" data-target="#Burlesque" aria-expanded="true" aria-controls="Burlesque">
+                      Burlesque <span class="crossed-text">12 000 &#8381;</span> <span><b>6 000 &#8381;</b></span>
                     </button>
                   </h5>
                 </div>
@@ -194,8 +194,8 @@
               <div class="card">
                 <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Foamy" aria-expanded="true" aria-controls="Foamy">
-                      Foamy euphoria
+                    <button class="btn btn-link w-100 d-flex justify-content-between" type="button" data-toggle="collapse" data-target="#Foamy" aria-expanded="true" aria-controls="Foamy">
+                      Foamy euphoria <span><b>от 1 900 &#8381;</b></span>
                     </button>
                   </h5>
                 </div>
@@ -219,8 +219,8 @@
               <div class="card">
                 <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Treatise" aria-expanded="true" aria-controls="Treatise">
-                      Treatise of Desires
+                    <button class="btn btn-link w-100 d-flex justify-content-between" type="button" data-toggle="collapse" data-target="#Treatise" aria-expanded="true" aria-controls="Treatise">
+                      Treatise of Desires <span><b>от 1 900 &#8381;</b></span>
                     </button>
                   </h5>
                 </div>
@@ -246,8 +246,8 @@
               <div class="card">
                 <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Temptation" aria-expanded="true" aria-controls="Temptation">
-                      Temptation
+                    <button class="btn btn-link w-100 d-flex justify-content-between" type="button" data-toggle="collapse" data-target="#Temptation" aria-expanded="true" aria-controls="Temptation">
+                      Temptation <span><b>от 1 900 &#8381;</b></span>
                     </button>
                   </h5>
                 </div>
@@ -269,8 +269,8 @@
               <div class="card">
                 <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Nonrandomness" aria-expanded="true" aria-controls="Nonrandomness">
-                      Nonrandomness
+                    <button class="btn btn-link w-100 d-flex justify-content-between" type="button" data-toggle="collapse" data-target="#Nonrandomness" aria-expanded="true" aria-controls="Nonrandomness">
+                      Nonrandomness <span><b>от 1 900 &#8381;</b></span>
                     </button>
                   </h5>
                 </div>
@@ -296,8 +296,8 @@
               <div class="card">
                 <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Sirens" aria-expanded="true" aria-controls="Sirens">
-                      Sirens
+                    <button class="btn btn-link w-100 d-flex justify-content-between" type="button" data-toggle="collapse" data-target="#Sirens" aria-expanded="true" aria-controls="Sirens">
+                      Sirens <span><b>от 1 900 &#8381;</b></span>
                     </button>
                   </h5>
                 </div>
@@ -323,8 +323,8 @@
               <div class="card">
                 <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#crazy" aria-expanded="true" aria-controls="crazy">
-                      We are crazy
+                    <button class="btn btn-link w-100 d-flex justify-content-between" type="button" data-toggle="collapse" data-target="#crazy" aria-expanded="true" aria-controls="crazy">
+                      We are crazy <span><b>от 1 900 &#8381;</b></span>
                     </button>
                   </h5>
                 </div>
@@ -355,8 +355,8 @@
               <div class="card">
                 <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Shrew" aria-expanded="true" aria-controls="Shrew">
-                      The Taming of the Shrew
+                    <button class="btn btn-link w-100 d-flex justify-content-between" type="button" data-toggle="collapse" data-target="#Shrew" aria-expanded="true" aria-controls="Shrew">
+                      <span class="text-left">The Taming of the Shrew</span> <span><b>от 1 900 &#8381;</b></span>
                     </button>
                   </h5>
                 </div>
@@ -386,8 +386,8 @@
               <div class="card">
                 <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Infinity" aria-expanded="true" aria-controls="Infinity">
-                      Infinity
+                    <button class="btn btn-link w-100 d-flex justify-content-between" type="button" data-toggle="collapse" data-target="#Infinity" aria-expanded="true" aria-controls="Infinity">
+                      Infinity <span><b>от 1 900 &#8381;</b></span>
                     </button>
                   </h5>
                 </div>
@@ -417,8 +417,8 @@
               <div class="card">
                 <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#Solo" aria-expanded="true" aria-controls="Solo">
-                      Solo
+                    <button class="btn btn-link w-100 d-flex justify-content-between" type="button" data-toggle="collapse" data-target="#Solo" aria-expanded="true" aria-controls="Solo">
+                      Solo <span><b>от 1 900 &#8381;</b></span>
                     </button>
                   </h5>
                 </div>
